--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 style="font-size: 28px; color: #1e90ff;">🎄 Season’s Greetings 🎄</h1>
 
       <!-- Decorative Image -->
-      <img src="photo.jpg" alt="Season's Greetings" style="width: 100%; border-radius: 10px;">
+      <img src="images/photo.jpg" alt="Season's Greetings" style="width: 100%; border-radius: 10px;">
 
       <!-- Message -->
       <p style="font-size: 16px; color: #555555; margin-top: 20px;">
@@ -23,7 +23,7 @@
 
       <!-- Autoplay Audio -->
       <audio autoplay loop>
-        <source src="jingleBells.mp3" type="audio/mpeg">
+        <source src="/audio/jingleBells.mp3" type="audio/mpeg">
         Your browser does not support the audio element. <a href="https://yourusername.github.io/christmas-card/audio/jingle-bells.mp3" style="color: #1e90ff;">Click here to listen.</a>
       </audio>
 
