--- a/index.html
+++ b/index.html
@@ -18,22 +18,24 @@
 
       <!-- Message -->
       <p style="font-size: 16px; color: #555555; margin-top: 20px;">
-        Wishing you a joyous holiday season and a prosperous New Year! Here's to continued success and collaboration in the year ahead.
+        Wishing you a joyous holiday season and a prosperous New Year! Thank you for your hard work and dedication. Here's to continued success and collaboration in the year ahead.
       </p>
 
-      <!-- Autoplay Audio -->
-      <audio autoplay loop>
-        <source src="/audio/jingleBells.mp3" type="audio/mpeg">
+      <!-- Play Button for Music -->
+      <p style="margin-top: 20px; font-size: 14px; color: #888888;">
+        🎶 Click below to enjoy festive music:
+      </p>
+      <audio controls style="width: 100%; max-width: 300px;">
+        <source src="audio/jingleBells.mp3" type="audio/mpeg">
         Your browser does not support the audio element. <a href="https://yourusername.github.io/christmas-card/audio/jingle-bells.mp3" style="color: #1e90ff;">Click here to listen.</a>
       </audio>
 
       <!-- Footer -->
       <p style="font-size: 14px; color: #999999; margin-top: 30px;">
         Best wishes,<br>
-        Joshua Long
+        [Your Name]
       </p>
     </div>
 
   </body>
 </html>
-
