--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 style="font-size: 28px; color: #1e90ff;">🎄 Season’s Greetings 🎄</h1>
 
       <!-- Decorative Image -->
-      <img src="images/photo.jpg" alt="Season's Greetings" style="width: 100%; border-radius: 10px;">
+      <img src="images/christmas.jpeg" alt="Season's Greetings" style="width: 100%; border-radius: 10px;">
 
       <!-- Message -->
       <p style="font-size: 16px; color: #555555; margin-top: 20px;">
