--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
       <h1 style="font-size: 28px; color: #1e90ff;">🎄 Season’s Greetings 🎄</h1>
 
       <!-- Decorative Image -->
-      <img src="images/christmas.jpeg" alt="Season's Greetings" style="width: 100%; border-radius: 10px;">
+      <img src="images/christmas.jpg" alt="Season's Greetings" style="width: 100%; border-radius: 10px;">
 
       <!-- Message -->
       <p style="font-size: 16px; color: #555555; margin-top: 20px;">
         Wishing you a joyous holiday season and a prosperous New Year! Here's to continued success and collaboration in the year ahead.
       </p>
 
-      <!-- Autoplay Audio -->  
-      <audio controls>
-        <source src="audio/jingleBells.mp3" type="audio/mpeg">
-        Your browser does not support the audio element. <a href="audio/jingleBells.mp3" style="color: #1e90ff;">Click here to listen to the music.</a>
-      </audio>
+<audio controls>
+  <source src="audio/jingleBells.mp3" type="audio/mpeg">
+  Your browser does not support the audio element. <a href="audio/jingleBells.mp3" style="color: #1e90ff;">Click here to listen to the music.</a>
+</audio>
+
 
 
       <!-- Footer -->
