--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <audio controls>
   <source src="audio/jingleBells.mp3" type="audio/mpeg">
-  Your browser does not support the audio element. <a href="audio/jingleBells.mp3" style="color: #1e90ff;">Click here to listen to the music.</a>
+  Your browser does not support the audio element. <a href="audio/jingleBells.mp3" type="audio/mpeg" style="color: #1e90ff;">Click here to listen to the music.</a>
 </audio>
 
 
