--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       </p>
 
 <audio controls>
-  <source src="audio/jingleBells.mp3" type="audio/mpeg">
-  Your browser does not support the audio element. <a href="audio/jingleBells.mp3" type="audio/mpeg" style="color: #1e90ff;">Click here to listen to the music.</a>
+  <source src="audio/music.mp3" type="audio/mpeg">
+  Your browser does not support the audio element. <a href="audio/music.mp3" type="audio/mpeg" style="color: #1e90ff;">Click here to listen to the music.</a>
 </audio>
 
 
