--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <!-- Message -->
       <p style="font-size: 16px; color: #555555; margin-top: 20px;">
-        Wishing you a joyous holiday season and a prosperous New Year! Here's to continued success and collaboration in the year ahead.
+        Wishing you a joyous holiday season and a prosperous New Year! 
       </p>
 
 <audio controls>
