--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <!-- Message -->
       <p style="font-size: 16px; color: #555555; margin-top: 20px;">
-        Wishing you a joyous holiday season and a prosperous New Year! 
+        Wishing you and your loved ones a joyous holiday season and a prosperous New Year! 
       </p>
 
 <audio controls>
